# YGOPic_Best

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  card_data.yml  publish.yml
core-wasm/: Cargo.toml
core-wasm/src/: lib.rs  main.rs
scripts/: copy-onnxruntime-web.mjs  copy-public.mjs  copy-wasm.mjs
src/: YGOPicRecognizer.ts  image.ts  index.ts  ort-assets.ts  types.ts  yolo.ts
