[package]
name = "core-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
img_hash = "3.2"
base64 = "0.21"
hex = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
bincode = "2.0.0-rc.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
walkdir = "2.5.0"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"